# slint-template-web-desktop-android

./: Cargo.toml  Justfile  Makefile  build.rs  build.sh  build2.sh  env.sh
release/html/: index.html
src/: lib.rs  main.rs  ui_stuff.rs
ui/: app-window.slint
